# kn

./: .ai-profile  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE.md  cliff.toml  install.ps1  install.sh  reasonix.toml
.claude/: settings.json
.codex/: config.toml
.codex/skills/test-demo/: SKILL.md
.github/workflows/: build-desktop.yml  ci-check.yml  deploy-site.yml
.qoder/: settings.local.json
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json
.superpowers/brainstorm/70337-1780646538/content/: current-layout.html  expandable-toolbar.html  full-toolbar.html  toolbar-arrangement.html
.superpowers/brainstorm/70337-1780646538/state/: server-stopped
.superpowers/brainstorm/75690-1780411873/content/: final-overview.html  layout-options.html  menu-structure.html  menu-v2.html  waiting.html
.superpowers/brainstorm/75690-1780411873/state/: server-stopped
agent/: Cargo.toml
agent/src/: bind.rs  config.rs  device.rs  error.rs  ipc.rs  launchd.rs  lib.rs  main.rs  proto.rs  session.rs  sink.rs  state.rs  ws_client.rs
agent/tests/: integration_test.rs  mock_wss.rs  wss_protocol_test.rs
common/: Cargo.toml
common/src/: crypto.rs  error.rs  fingerprint.rs  lib.rs  path.rs  profile.rs  pty_trait.rs
desktop/: .env  .gitignore  BUILD.md  CLAUDE.md  PROJECT_SCOPE_PLUGIN_PLAN.md  build.sh  index.html  package-lock.json  package.json  scope-ui-demo.html  tailwind.config.ts  test-project-scope-plugin.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json  update.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/hook_scripts/: auto-commit.sh  auto-format.sh  auto-lint.sh  auto-stage.sh  block-bypass-comments.py  block-dangerous-commands.sh  block-main-branch-edits.sh  context-monitor.sh  git-status-inject.sh  go-vet-check.sh  notify-on-stop.sh  protect-sensitive-files.sh  python-typecheck.sh  rust-clippy-check.sh  secret-scan.py  session-context.sh  stop-quality-gate.sh  todo-fixme-collector.sh  typescript-typecheck.sh
desktop/src-tauri/hook_scripts/java/: java-checkstyle-lint.sh  java-compile-check.sh  java-enforce-wrapper.sh  java-quality-gate.sh  java-spotless-format.sh  java-spring-context.sh
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: agent_ipc.rs  agent_manager.rs  commands.rs  hook_logs.rs  hook_manager.rs  hook_meta.rs  hook_store.rs  lib.rs  main.rs  profile_cmd.rs  project_manager.rs  pty.rs  skill_manager.rs  usage.rs
desktop/src-tauri/src/skill_manager/: content.rs  file_utils.rs  mod.rs  paths.rs  transfer.rs  types.rs
desktop/src/components/: AboutDialog.tsx  ActivityBar.tsx  AgentDetail.tsx  AgentPanel.tsx  BindDialog.tsx  CallChainPanel.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DependencyGraph.tsx  EnvVarRow.tsx  EnvVarTable.tsx  ErrorBoundary.tsx  ExpandableToolbar.tsx  FileTree.tsx  HookDetail.tsx  HookList.tsx  HookStore.tsx  HookWizard.tsx  ImportPreview.tsx  LocalCliUsage.tsx  MainPanel.tsx  MarketplaceBrowser.tsx  NameDialog.tsx  OnboardingWizard.tsx  PaneSplitter.tsx  PaneTerminal.tsx  ProfileDialog.tsx  ProfileDrawer.tsx  ProjectDetail.tsx  ProjectOverview.tsx  ProjectSelector.tsx  ProjectSidebar.tsx  ProjectWorkspace.tsx  QuickSwitcher.tsx  RedeemDialog.tsx  ResourceDetail.tsx  ResourceDrawer.tsx  ResourceList.tsx  ScanPreview.tsx  ScopeTabs.tsx  (+13 more)
desktop/src/components/__tests__/: BindDialog.test.tsx  LocalCliUsage.test.tsx  ProfileDrawer.test.tsx  ProjectSidebar.test.tsx  ProjectWorkspace.test.tsx  RedeemDialog.test.tsx  (+3 more)
desktop/src/hooks/: useAgent.ts  useFontScale.ts  useGlobalShortcuts.ts  useOverwriteConfirm.tsx  useProfiles.ts  useProjectContext.ts  useProjects.ts  useResizeHandle.ts  useSessionScanner.ts  useTerminal.ts  useTerminalCloseGuard.ts  useTheme.ts  useToasts.ts  useUsage.ts
desktop/src/lib/: cli-constants.ts  key-format-detector.ts  pane-types.ts  path-utils.ts  provider-presets.ts  resource-transfer.ts  tauri-api.ts  terminalThemes.ts  time-utils.ts  types.ts
desktop/src/styles/: globals.css
desktop/src/utils/: shortcut.ts
desktop/update/: demo.json  update.json  update.prod.json
docs/strategy/: competitive-analysis-nimbalyst.md  terminal-tabby-parity-plan.md
docs/superpowers/plans/: 2026-05-29-ai-profile-manager.md  2026-06-02-docs-page.md  2026-06-03-token-usage-dashboard.md  2026-06-06-agent-management-implementation.md  2026-06-10-project-workspace-plan.md
docs/superpowers/specs/: 2026-05-29-ai-profile-manager-design.md  2026-06-02-docs-page-design.md  2026-06-05-agent-management-design.md  2026-06-05-sidebar-expandable-toolbar-design.md  2026-06-05-skill-plugin-manager-design.md  2026-06-05-workflow-mining-brainstorm.md  2026-06-07-file-tree-detail-design.md  2026-06-10-project-workspace-design.md
lib/: config.py
shell/: ai-profile.ps1  ai-profile.sh
shell/completions/: _ai  ai.bash
shell/hooks/: record-usage.py
site/: index.html  package-lock.json  package.json  vite.config.ts
site/src/: App.vue  config.ts
site/src/components/: ComparisonSection.vue  DesktopDemo.vue  DocsSection.vue  DownloadSection.vue  FeaturesSection.vue  HeroSection.vue  HowItWorksSection.vue  NavBar.vue  SiteFooter.vue
site/src/composables/: useScrollReveal.ts  useTheme.ts  useTypingAnimation.ts
site/src/data/: docs.ts
site/src/router/: index.ts
site/src/styles/: global.css
site/src/types/: docs.ts
site/src/views/: DocsPage.vue  LandingPage.vue
templates/: config.yaml
tests/: test_config.py  test_json_output.py  test_profile_init.py  test_shell_smoke.sh
(+22 files in other folders)
