[package]
name = "kn-common"
version.workspace = true
edition.workspace = true
description = "kn — Desktop 与 Agent 共享的公共模块"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
fs2.workspace = true
sha2.workspace = true
chrono.workspace = true
base64.workspace = true
thiserror.workspace = true
aes-gcm.workspace = true
rand.workspace = true
security-framework.workspace = true
hex.workspace = true
libc.workspace = true
portable-pty.workspace = true
