[package]
name = "ai-profile-manager"
version = "1.0.7"
edition = "2021"
description = "AI Profile Manager Desktop App"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
portable-pty = "0.8"
fs2 = "0.4"
libc = "0.2"
sha2 = "0.10"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking"] }
toml = "0.8"
toml_edit = "0.22"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
