[package]
name = "kn"
version.workspace = true
edition.workspace = true
description = "kn — AI 开发工作台"

[dependencies]
kn-common = { path = "../../common" }
tauri.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-updater.workspace = true
portable-pty.workspace = true
fs2.workspace = true
libc.workspace = true
sha2.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
serde_yaml.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
toml.workspace = true
toml_edit.workspace = true
chrono.workspace = true
regex-lite.workspace = true

[build-dependencies]
tauri-build.workspace = true

[profile.release]
strip = true
lto = true
codegen-units = 1

[lints.rust]
warnings = "deny"
